WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132885
[Mac] hasVideo should return true when video is ready to display
https://bugs.webkit.org/show_bug.cgi?id=132885
Summary
[Mac] hasVideo should return true when video is ready to display
Eric Carlson
Reported
2014-05-13 14:52:15 PDT
If the AVPlayerLayer is readyForDisplay, set hasVideo to true.
Attachments
Proposed patch
(14.58 KB, patch)
2014-05-13 15:04 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
wrong file...
(1.99 MB, text/plain)
2014-05-13 16:37 PDT
,
Eric Carlson
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2014-05-13 15:04:59 PDT
Created
attachment 231409
[details]
Proposed patch
WebKit Commit Bot
Comment 2
2014-05-13 15:06:12 PDT
Attachment 231409
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jer Noble
Comment 3
2014-05-13 16:18:25 PDT
Comment on
attachment 231409
[details]
Proposed patch r=me
Eric Carlson
Comment 4
2014-05-13 16:37:54 PDT
Created
attachment 231419
[details]
wrong file...
Eric Carlson
Comment 5
2014-05-13 16:49:47 PDT
Committed
r168755
:
http://trac.webkit.org/changeset/168755
Eric Carlson
Comment 6
2014-05-13 17:01:46 PDT
Plus a build fix landed in
r168758
:
http://trac.webkit.org/changeset/168758
Radar WebKit Bug Importer
Comment 7
2026-02-11 05:26:12 PST
<
rdar://problem/170140278
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug